pv-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myd
spec:
  replicas: 1
  selector:
    matchLabels:
      env: prod
  template:
    metadata:
      name: "wpod"
      labels:
        env: prod
    spec:
      volumes:
      - name: mypod-pvc
        persistentVolumeClaim:
          claimName: mypvc

      containers:
      - name: "webc1"
        image: "vimal13/apache-webserver-php"
        volumeMounts:
         - mountPath: /var/www/html
           name: mypod-pvc
