ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: www.lw.com
      http:
        paths:
          - path: /web
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 80

          - path: /db
            pathType: Prefix
            backend:
             service:
               name: db
               port:
                 number: 80

    - host: "*.lw.com"
      http:
        paths:
        - pathType: Prefix
          path: "/foo"
          backend:
            service:
              name: db
              port:
                number: 80

    - http:
       paths:
       - pathType: Prefix
         path: "/"
         backend:
          service:
            name: web
            port:
              number: 80
